			ROX-Session
			Session manager for the ROX desktop
			by Thomas Leonard

09-Jul-2005
~~~~~~~~~~~
Work-around for problem with D-BUS 0.3 Python bindings which prevented them
working with Python 2.3 (Thomas Leonard, reported by Marcus).

03-Jul-2005
~~~~~~~~~~~
Allow ROX-Session to compile with DBUS 0.3x (Tony Houghton and Thomas Leonard).
Try to run ROX-Session using 0launch, if possible (Thomas Leonard).

20-May-2005
~~~~~~~~~~~
Change the way that ROX-Session runs ROX-Filer. It now uses the -S option to
open the default Panel and Pinboard, with the configuration of panel and 
pinboard in ROX-Filer options (Stephen Watson).

12-May-2005
~~~~~~~~~~~
Updated Chinese translation (Babyfai Cheung).
Bugfix: Make sure messages are valid UTF-8 before logging (Thomas Leonard).

01-May-2005
~~~~~~~~~~~
Removed code for setting scroll lock. Doesn't work, and nobody uses scroll
lock anyway (Thomas Leonard).

30-Apr-2005
~~~~~~~~~~~
Added Brazilian Portuguese translation (Jose Carlos).
Bugfix: Don't refuse to start if the new Environment file doesn't exist
	(Thomas Leonard).

10-Apr-2005
~~~~~~~~~~~
Provide a way to set up a user's environment in general (Stephen Watson).

04-Mar-2005
~~~~~~~~~~~
Set $BROWSER to ROX-Session/browser on login. This is a script that runs your
configured web-browser ($XDG_CONFIG_DIRS/rox.sourceforge.net/handlers/BROWSER),
or picks a suitable default if none is set (Thomas Leonard).

22-Jan-2005
~~~~~~~~~~~
Allow setting keyboard LEDs (Caps lock, Num lock, Scroll lock) on login (Guido
Schimmes). This is used by Keyboard, a configuration application.

23-Dec-2004
~~~~~~~~~~~
Added Chinese translation (Babyfai Cheung).

23-Oct-2004
~~~~~~~~~~~
Updated Dutch translation (Jan Wagemakers).

15-Oct-2004
~~~~~~~~~~~
Allow Xcursor code to compile under GLib 2.2 (Stephen Watson).

06-Sep-2004 (Release 0.1.25)
~~~~~~~~~~~
Use new ROX-Lib system for getting root access (Thomas Leonard).

30-Aug-2004
~~~~~~~~~~~