@@ -2,10 +2,17 @@
 			Session manager for the ROX desktop
 			by Thomas Leonard
 
+28-Aug-2005
+~~~~~~~~~~~
+Updated build system to match ROX-Filer: generated files go in the 'build'
+directory and the platform guessing has been removed (Thomas Leonard).
+
 09-Jul-2005
 ~~~~~~~~~~~
 Work-around for problem with D-BUS 0.3 Python bindings which prevented them
 working with Python 2.3 (Thomas Leonard, reported by Marcus).
+Separated the Guide from ROX-Session, as it was getting far too big (Thomas
+Leonard).
 
 03-Jul-2005
 ~~~~~~~~~~~
